// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanel renders correctly with className 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl test"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with empty props 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with id 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
    id="test"
    role="tabpanel"
  >
    First
  </div>
</div>
`;
